@startuml
skinparam defaultFontSize 15
skinparam nodesep 50
skinparam ranksep 50
skinparam classAttributeIconSize 0
skinparam ArrowFontStyle plain
hide empty members
hide circle

abstract class Command {
    + execute(inventory: Inventory, ui: Ui, customerList: CustomerList) {abstract}
}

class AddCommand {
    + COMMAND_WORD: String = "add"
    - name: String
    - dosage: String
    - quantity: int
    - expiryDate: String
    .. optional fields omitted ..

    + AddCommand(...)
    + execute(inventory: Inventory, ui: Ui, customerList: CustomerList)
}

class Medication {
    - name: String
    - dosage: String
    - quantity: int
    - expiryDate: String

    + Medication(...)
}

class Inventory {
    - medications: ArrayList<Medication>

    + containsMedication(newMed: Medication): boolean
    + addMedication(medication: Medication)
}

class Ui {
    + printAddedMessage(med: Medication, inventory: Inventory)
}

class CustomerList {
    - customers: ArrayList<Customer>
}

Command <|-- AddCommand : inherits
AddCommand ..> Medication : creates >
AddCommand ..> Inventory : checks / adds to >
AddCommand ..> Ui : updates >
AddCommand ..> CustomerList : receives >

@enduml